--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
+    background-color: white;
     margin: 0;
     padding: 0;
     font-family: "Noto Naskh Arabic", serif;
@@ -11,7 +12,7 @@ p {
 
 .book-page {
     background-color: white;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
     margin: 20px;
     padding: 40px; 
 }
