--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ p {
 .book-page {
     background-color: white;
     /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
-    margin: 20px;
+    /* margin: 20px; */
     padding: 40px; 
 }
 
